# robot-student

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
experiment/ant/: ant.xml  environment.py  evaluate.py  model.py  train.py
experiment/ant/train/: ppo.py
experiment/g1/: environment.py  train.py
experiment/g1/mjcf/: g1_23dof_constants.py
playground/: ant.py  pendulum.py
src/robot_student/: __init__.py
src/robot_student/algorithm/: __init__.py  ppo.py  rollout_buffer.py
src/robot_student/engine/: __init__.py  control_mode.py  engine.py  genesis_character.py  genesis_engine.py  newton_engine.py
src/robot_student/environment/: __init__.py  character_environment.py  character_task.py  environment.py  run_in_direction_task.py  schema.py
src/robot_student/model/: __init__.py  actor_critic.py  distribution.py  mlp.py  normalizer.py  ppo_model.py  weight_initializer.py
src/robot_student/models/: __init__.py
src/robot_student/util/: __init__.py  experiment.py  experiment_storage.py  geometry.py  logging.py  seed.py
