[project]
name = "robot-student"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Matthieu Coquet", email = "matthieu.coquet@outlook.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "tensordict>=0.13.0",
    "torch>=2.12.0",
    "genesis-world>=1.0.0",
    "tensorboard>=2.21.0",
    "wandb>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]

[project.scripts]
robot-student = "robot_student:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 140
src = ["src", "tests", "experiment"]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
